k8s/infra-security.yaml
# --- KEYCLOAK ---
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:25.0.0
        args: ["start-dev", "--import-realm"]
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: realm-config
          mountPath: /opt/keycloak/data/import/neobank-realm.json
          subPath: neobank-realm.json
      volumes:
      - name: realm-config
        configMap:
          name: keycloak-realm-config
