k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neobank-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: api.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
  - host: keycloak.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8090
  - host: grafana.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: kibana.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
  - host: zipkin.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
  - host: kafka-ui.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080
  - host: prometheus.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
  - host: unleash.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unleash
            port:
              number: 4242
  - host: vault.neobank.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault
              port:
                number: 8200
  - host: eureka.neobank.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: discovery-server
              port:
                number: 8761
  - host: admin.neobank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-frontend
            port:
              number: 3001
